<resources>
    <string name="app_name">TourApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="list_fragment_label">My Places</string>
    <string name="edit_fragment_label">Edit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_list_fragment">Hello list fragment. Arg: %1$s</string>
    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places_list">My Places</string>
    <string name="about">About</string>
    <string name="map_fragment_label">Map</string>
    <string name="editmyplace_name_label">Name</string>
    <string name="editmyplace_desc_label">Description</string>
    <string name="editmyplace_add_label">Add</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <string name="viewmyplace_finished_label">Close</string>
    <string name="view_fragment_label">View My Place</string>
    <string name="editmyplace_longitude_label">Longitude</string>
    <string name="editmyplace_latitude_label">Latitude</string>
    <string name="editmyplace_button_set_coordinates">Set</string>
    <string name="about_text">
        <i>Tour App</i> is an application that will help you find the best locations to visit in city!
    </string>
    <string name="ok">OK</string>
    <string name="title_activity_my_places_list">MyPlacesList</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_activity_username_label">Username:</string>
    <string name="register_activity_password_label">Password:</string>
    <string name="register_activity_ime_label">Name:</string>
    <string name="register_activity_prezime_label">Surname:</string>
    <string name="register_activity_telefon_label">Phone number:</string>
    <string name="register_activity_kamera_btn">Camera</string>
    <string name="register_activity_galerija_btn">Galery</string>
    <string name="register_activity_ok_btn">Create</string>
    <string name="register_activity_close_btn">Close</string>
    <string name="register_activity_email_label">Email:</string>
    <string name="login_activity_login_button">Login</string>
    <string name="login_activity_register_button">Register</string>
    <string name="login_activity_username_label">Username:</string>
    <string name="login_activity_password_label">Password:</string>
    <string name="welcome_message">Hello, please sign in</string>
    <string name="editmyplace_autor_label">Autor</string>
    <string name="edit_fragment_camera_btn">Camera</string>
    <string name="edit_fragment_galery_btn">Galery</string>
    <string name="edit_fragment_ocena_label">Grade</string>
    <string name="edit_fragment_save_label">Save</string>
    <string name="editmyplace_category_label">Category</string>
    <string name="list_fragment_autor_rb">Autor</string>
    <string name="list_fragment_category_rb">Category</string>
    <string name="list_fragment_grade_rb">Grade</string>
    <string name="list_fragment_ok_btn">Ok</string>
    <string name="list_fragment_reset_label">Reset</string>
    <string name="list_fragment_radius_rb">Radius</string>

    <string name="rank_fragment_label">Rank</string>

    <string name="users_fragment_label">Users</string>
    <string name="popup_menu_view">View</string>
    <string name="popup_menu_edit">Edit</string>
    <string name="popup_menu_show">Show</string>
    <string name="popup_menu_rank">Rank</string>
    <string name="users_list">Users</string>
    <string name="rank_comment">Comment</string>
    <string name="your_name">Your Name</string>
    <string name="yourname">yourname</string>
    <string name="your_email">Your Email</string>
    <string name="youremail">youremail</string>
    <string name="your_phone">Your Phone</string>
    <string name="yourphone">yourphone</string>
    <string name="your_points">Your Points</string>
    <string name="yourpoints">yourpoints</string>
    <string name="add_number">Add Number</string>
    <string name="info">info</string>
    <string name="opadajuci">Opadajuci</string>
</resources>