<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewFragment"
    android:orientation = "vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label" />
    <TextView
        android:id="@+id/viewmyplace_name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label" />

    <TextView
        android:id="@+id/viewmyplace_desc_text"
        android:layout_width="fill_parent"
        android:layout_height="83dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_longitude_label" />

    <TextView
        android:id="@+id/viewmyplace_long_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_latitude_label" />

    <TextView
        android:id="@+id/viewmyplace_lat_text"
        android:layout_width="fill_parent"
        android:layout_height="245dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/viewmyplace_finished_button"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:text="@string/viewmyplace_finished_label" />

</LinearLayout>