<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.EditFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="205dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_name_label" />

        <EditText
            android:id="@+id/editmyplace_name_edit"
            android:layout_width="242dp"
            android:layout_height="36dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_category_label" />

        <EditText
            android:id="@+id/editmyplace_category_edit"
            android:layout_width="242dp"
            android:layout_height="36dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_desc_label" />

        <EditText
            android:id="@+id/editmyplace_desc_edit"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewAutor"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_autor_label" />

        <EditText
            android:id="@+id/editmyplace_autor_edit"
            android:layout_width="242dp"
            android:layout_height="36dp"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/EditFragmentImg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="0"
                android:adjustViewBounds="false"
                android:maxWidth="120dp"
                android:maxHeight="30dp"
                android:minWidth="120dp"
                android:minHeight="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="254dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btnCamera"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_fragment_camera_btn"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/btnGalerija"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.186"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnGalerija"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_fragment_galery_btn"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnCamera" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:text="@string/editmyplace_longitude_label" />

                <EditText
                    android:id="@+id/editmyplace_longitude_label"
                    android:layout_width="242dp"
                    android:layout_height="36dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:text="@string/editmyplace_latitude_label" />

                <EditText
                    android:id="@+id/editmyplace_latitude_label"
                    android:layout_width="241dp"
                    android:layout_height="36dp" />
            </LinearLayout>

            <Button
                android:id="@+id/editmyplace_location_button"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:text="@string/editmyplace_button_set_coordinates" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/editmyplace_finished_button"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:text="@string/editmyplace_add_label"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="55dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/editmyplace_cancel_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:text="@string/editmyplace_cancel_label"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="259dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/EditFragmentGradesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/edit_fragment_ocena_label"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditFragmentGradesTV"
         />

</androidx.constraintlayout.widget.ConstraintLayout>