<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="60px"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="40px"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/lineralayoutButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_username_label"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/regetusername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/regtvsifra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_password_label"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/regetpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/regtvIme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_ime_label"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/regetname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPersonName"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/regtvprezime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_prezime_label"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/regetprezime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/regtvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_activity_telefon_label"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/regetphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="30px"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:maxWidth="120dp"
                    android:maxHeight="120dp"
                    android:minWidth="120dp"
                    android:minHeight="120dp"
                    app:srcCompat="@drawable/ic_launcher_background" />


                <Button
                    android:id="@+id/regbtnKamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_activity_kamera_btn" />

                <Button
                    android:id="@+id/regbtnGalerija"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_activity_galerija_btn" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineralayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40px"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/regbtnReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10px"
                android:layout_weight="1"
                android:text="@string/register_activity_ok_btn"
                android:textSize="18dp" />

            <Button
                android:id="@+id/regbtnclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_weight="1"
                android:text="@string/register_activity_close_btn"
                android:textSize="18dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>