<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        tools:context=".Login">

        <TextView
            android:text="@string/welcome_message"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="@font/bevan"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_margin="30sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUserNameET"
                android:hint="Username"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginSifraET"
                android:hint="Password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/login_BtnLog"
            android:text="@string/login_activity_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/loginbtnRegister"
            android:text="@string/login_activity_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>


    </LinearLayout>

</FrameLayout>